--- a/src/App.css
+++ b/src/App.css
@@ -1,80 +1,3 @@
-html,
 body {
-  margin: 0;
-  font-family: Roboto;
-}
-h1 {
-  font-family: Roboto;
-}
-#App {
-  font-family: sans-serif;
-  height: 100vh;
-}
-
-#page-wrap {
-  text-align: center;
-  overflow: auto;
-}
-
-.bm-item {
-  display: inline-block;
-  text-decoration: none;
-  margin-bottom: 10px;
-  color: #d1d1d1;
-  transition: color 0.2s;
-  border: 2px solid grey;
-  text-align: center;
-  box-shadow: 0 2px 2px 0;
-  
-}
-
-.bm-item:hover {
-  color: white;
-}
-
-.bm-burger-button {
-  position: fixed;
-  width: 30px;
-  height: 20px;
-  left: 30px;
-  top: 20px;
- 
-}
-
-.bm-burger-bars {
-  background: white;
-  position: relative;
-}
-
-.bm-cross-button {
-  height: 14px;
-  width: 14px;
-  margin-right: 40px;
-}
-
-.bm-cross {
-  background: #bdc3c7;
-}
-
-.bm-menu {
-  background: #373a47;
-  padding: 4.5em 1.5em 0;
-  font-size: 1.05em;
-  margin-right: 40px;
-}
-
-.bm-morph-shape {
-  fill: #373a47;
-}
-
-.bm-item-list {
-  color: #b8b7ad;
-  
-}
-
-.bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
-}
-a:link {
-  text-decoration: none;
+  font-family: Roboto, sans-serif;
 }
