--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,101 @@
+html,
 body {
-  font-family: Roboto, sans-serif;
+  margin: 0;
+  font-family: Roboto;
+}
+h1 {
+  font-family: Roboto;
+}
+#App {
+  font-family: sans-serif;
+  height: 100vh;
+}
+
+#page-wrap {
+  text-align: center;
+  overflow: auto;
+}
+
+.bm-item {
+  display: inline-block;
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: white;
+  transition: color 0.2s;
+  border: 3px solid rgb(177, 128, 128);
+  text-align: center;
+  box-shadow: 0 1px 1px 0;
+
+}
+
+.bm-item:hover {
+  color: rgb(128, 63, 63);
+}
+
+.bm-burger-button {
+  position: fixed;
+  width: 25px;
+  height: 18px;
+  left: 30px;
+  top: 20px;
+  margin-left: 40px;
+ 
+}
+
+.bm-burger-bars {
+  background: white;
+  position: relative;
+
+}
+
+.bm-cross-button {
+  height: 14px;
+  width: 14px;
+  margin-right: 85px;
+
+}
+
+.bm-cross {
+  background: black;
+}
+
+.bm-menu {
+  background: #343a40;
+  padding: 4.5em 1.5em 0;
+  font-size: 1.05em;
+  margin-right: 80px;
+  margin-top: -24px;
+
+}
+
+.bm-morph-shape {
+  fill: #373a47;
+
+}
+
+.bm-item-list {
+  color: white;
+  
+}
+
+.bm-overlay {
+  background: white;
+  margin-top: -25px;
+
+}
+a:link {
+  text-decoration: none;
+}
+
+.brand-logo {
+  font-weight: bold;
+  
+
+}
+.nav-link{
+  font-weight: bold;
+margin-right: -100px;
+}
+.fa-plus{
+  font-weight: bold;
 }
