--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h1 {
+  font-size: 2.8rem;
+  color: #aaaaaa;
+}
+
+h4 {
+  font-size: 1.6rem;
+  color: #aaaaaa;
+}
