mixed folders are redesigned and put in renamed folders

--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,7 +1,7 @@
 body{
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgb(184, 220, 233);
+    background-color: #a8d0e6;
     
 }
 
