--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,26 +1,23 @@
-.homeButton{
-font-weight: bold;
-}
-.sidenav{
-
-width: 250px;
-background-image: url(https://thumbs.dreamstime.com/b/medical-background-animation-hd-39917580.jpg);
-background-size: 700px 700px;
-
-
- 
+.homeButton {
+    font-weight: bold;
 }
 
-.sideLinks{
-color:blue;
-  
+.sidenav {
+    width: 250px;
+    background-color: #ADD8E6;
 }
-.sideLinks:hover{
+
+.sideLinks {
+    color: blue;
+}
+
+.sideLinks:hover {
     color: rgb(151, 151, 211);
 }
+
 .brand-logo {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
-.social{
+.social {
     text-align: center;
 }
