made some finishing touches

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,10 @@ code {
 
 h1 {
   font-size: 2.8rem;
-  color: #aaaaaa;
+  color: #000000;
 }
 
 h4 {
   font-size: 1.6rem;
-  color: #aaaaaa;
+  color: #000000;
 }
