--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 body {
   font-family: Roboto, sans-serif;
+  
+ background: linear-gradient(to right, rgb(202, 148, 194), rgb(34, 101, 116));
+  
+
 }
