--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
 
 .sidenav {
     width: 250px;
-    background-color: #ADD8E6;
+    background: linear-gradient(to right, rgb(153, 99, 145), rgb(87, 184, 206));
 }
 
 .sideLinks {
@@ -12,12 +12,10 @@
 }
 
 .sideLinks:hover {
-    color: rgb(151, 151, 211);
+    color: rgb(149, 149, 209);
 }
 
 .brand-logo {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
-}
-.social {
-    text-align: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  
 }
