--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,16 +1,90 @@
-h4 {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-}
 
-#videoTag {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
+h1{
+    -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 10s; /* Safari 4.0 - 8.0 */
+    animation-name: example;
+    animation-duration: 55s;
+
+
 }
+@-webkit-keyframes example {
+    0%   {color: pink;}
+    10%  {color: green;}
+    20%  {color: gold;}
+    30% {color: lavender;}
+    40% {color: brown;}
+    50% {color: grey;}
+    60% {color: orange;}
+    70% {color: purple;}
+    80% {color: blue;}
+    90% {color: yellow;}
+    100% {color: red;}
+
+  }
+  
+  /* Standard syntax */
+  @keyframes example {
+    0%   {color: pink;}
+    10%  {color: green;}
+    20%  {color: gold;}
+    30% {color: lavender;}
+    40% {color: brown;}
+    50% {color: grey;}
+    60% {color: orange;}
+    70% {color: purple;}
+    80% {color: blue;}
+    90% {color: yellow;}
+    100% {color: red;}
+  }
+  
+  h3{
+    color:white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 32px;
+    font-weight: bold;
+    -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 10s; /* Safari 4.0 - 8.0 */
+    animation-name: example;
+    animation-duration: 55s;
+
+}
+@-webkit-keyframes example {
+    0%   {color: red;}
+    10%  {color: yellow;}
+    20%  {color: blue;}
+    30% {color: purple;}
+    40% {color: orange;}
+    50% {color: grey;}
+    60% {color: brown;}
+    70% {color: lavender;}
+    80% {color: gold;}
+    90% {color: green;}
+    100% {color: pink;}
+  }
+  
+  /* Standard syntax */
+  @keyframes example {
+    0%   {color: red;}
+    10%  {color: yellow;}
+    20%  {color: blue;}
+    30% {color: purple;}
+    40% {color: orange;}
+    50% {color: grey;}
+    60% {color: brown;}
+    70% {color: lavender;}
+    80% {color: gold;}
+    90% {color: green;}
+    100% {color: pink;}
+  }
+
+  #videoTag{
+    position: fixed;
+     right: 0;
+     bottom: 0;
+     min-width: 100%; 
+     min-height: 100%;
+     z-index: 1;
+   }
 
 .homePage {
     position: relative;
@@ -18,6 +92,21 @@ h4 {
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
+}
+.homePage{
+    position: relative;
+    bottom: 0;
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+    z-index: 1;
+    text-align: center;
+}
+.info{
+    opacity: 0.1;
+}
+.info:hover{
+    opacity: 0.8;
 }
 
 
